# task_scheduler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
fake_data/: tasks.json
src/: main.py
src/app/: scheduler.py  task_factory.py
src/app/sources/: api_source.py  file_source.py  gen_source.py  registry.py  setup_registry.py
src/core/: cli.py  scheduler.py
src/delivery/: cli.py
src/domain/: exceptions.py  source_protocol.py  task.py  task_descriptors.py
src/infra/: config.py  logger.py
src/models/: exceptions.py  source_protocol.py  task.py
src/sources/: api_source.py  file_source.py  gen_source.py  registry.py  setup_registry.py
src/utils/: config.py
tests/unit/: conftest.py  test_protocol.py  test_registry.py  test_scheduler.py  test_sources.py  test_task.py
