[project]
name = "task-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13.7"
ignore_missing_imports = true
